# bazel-recipes

./: BUILD  Makefile  README.md  WORKSPACE  cloudbuild.yaml  go_dependencies.bzl
clojure_in_container/: BUILD  README.md  clojure_in_container.clj
gcp_cloud_function/: BUILD  README.md  email.go  go.mod  go.sum  notify.go  notify_test.go
go_openapi_service/: BUILD  README.md  go.mod  go.sum  swagger.yml
go_openapi_service/cmd/todo-list-server/: BUILD.bazel  main.go
go_openapi_service/models/: BUILD.bazel
go_openapi_service/restapi/: BUILD.bazel  configure_todo_list.go  doc.go  server.go
go_openapi_service/restapi/operations/: BUILD.bazel  todo_list_api.go
go_openapi_service/restapi/operations/todos/: BUILD.bazel  add_one_parameters.go  add_one_responses.go  destroy_one_responses.go  find_todos_responses.go  update_one_parameters.go  update_one_responses.go
integration_test_with_services/: BUILD  README.md  entrypoint.sh  env.sh  workload.sh
integration_test_with_services/prestart.d/: 01_postgres.sh  02_database_setup.sh  03_schema_migration.sh
java_in_container/: BUILD  JavaInContainer.java  README.md
junit-in-container/: junit5.bzl
junit-in-container/src/main/java/junitcontainer/: BUILD
junit-in-container/src/test/java/junitcontainer/: BUILD
junit-in-container/src/test/java/junitcontainer/junit4/: BUILD  JUnitResultFormatterAsRunListener.java  MagicNumberTest.java  RunTests.java
junit-in-container/src/test/java/junitcontainer/junit5/: BUILD  MagicNumberTest.java
junit-in-container/tools/bazeljunit5/src/test/java/com/flexport/bazeljunit5/: BUILD
junit_in_container/: README.md
junit_in_container/src/main/java/junitcontainer/: UnderTest.java
junit_in_container/src/test/java/junitcontainer/: BUILD  Constants.java
junit_in_container/src/test/java/junitcontainer/junit4/: BUILD  DescriptionAsTest.java  TestSuite.java
junit_in_container/src/test/java/junitcontainer/junit5/: BUILD  RunTests.java
junit_in_container/tools/bazeljunit5/src/main/java/com/flexport/bazeljunit5/: BUILD  BazelJUnit5ConsoleLauncher.java
junit_in_container/tools/bazeljunit5/src/test/java/com/flexport/bazeljunit5/: BUILD  BazelJUnit5ConsoleLauncherTest.java
turps/: BUILD  README.md  go.mod  go.sum
turps/api/: BUILD  turps.proto
turps/cmd/client/: BUILD  main.go  main_test.go
turps/cmd/turpsd/: BUILD  main.go
turps/db/: BUILD
turps/db/migrations/: 000001_create_change_list_tables.down.sql  000001_create_change_list_tables.up.sql
turps/internal/: BUILD  chglist.go  chglist_test.go  testutil.go
turps/internal/grpc/: BUILD  app.go  server.go  server_test.go  transform.go  transform_test.go
turps/internal/postgres/: BUILD  storage.go  storage_test.go
turps/internal/postgres/testing/: BUILD  testing.go
turps/test/: BUILD  driver_api.go  driver_cli.go  e2e_test.go  spec.go
turps/test/data/: change_list.json  test_run.json
turps/test/image/: BUILD  env.sh  workload.sh
turps/test/image/prestart.d/: 01_postgres.sh  02_database_setup.sh  03_schema_migration.sh  04_turpsd.sh
