load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "error.go",
        "item.go",
    ],
    importpath = "humphrej/go_openapi_service/models",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_go_openapi_errors//:go_default_library",
        "@com_github_go_openapi_strfmt//:go_default_library",
        "@com_github_go_openapi_swag//:go_default_library",
        "@com_github_go_openapi_validate//:go_default_library",
    ],
)
