load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "add_one.go",
        "add_one_parameters.go",
        "add_one_responses.go",
        "add_one_urlbuilder.go",
        "destroy_one.go",
        "destroy_one_parameters.go",
        "destroy_one_responses.go",
        "destroy_one_urlbuilder.go",
        "find_todos.go",
        "find_todos_parameters.go",
        "find_todos_responses.go",
        "find_todos_urlbuilder.go",
        "update_one.go",
        "update_one_parameters.go",
        "update_one_responses.go",
        "update_one_urlbuilder.go",
    ],
    importpath = "humphrej/go_openapi_service/restapi/operations/todos",
    visibility = ["//visibility:public"],
    deps = [
        "//go_openapi_service/models:go_default_library",
        "@com_github_go_openapi_errors//:go_default_library",
        "@com_github_go_openapi_runtime//:go_default_library",
        "@com_github_go_openapi_runtime//middleware:go_default_library",
        "@com_github_go_openapi_strfmt//:go_default_library",
        "@com_github_go_openapi_swag//:go_default_library",
    ],
)
